syntax = "proto3";

package customer.models.v1;

option csharp_namespace = "DKH.CustomerService.Contracts.Models.V1";

import "google/protobuf/timestamp.proto";

message WishlistItem {
  string id = 1;
  string customer_id = 2;
  string product_id = 3;
  string product_sku_id = 4;
  google.protobuf.Timestamp added_at = 5;
  string note = 6;
}

message Wishlist {
  repeated WishlistItem items = 1;
  int32 total_count = 2;
}
